Fixes #137 - Custom menu items are too close when using Moove theme

--- a/scss/moove/_navbar.scss
+++ b/scss/moove/_navbar.scss
@@ -93,7 +93,7 @@ nav.navbar {
     }
 
     .custom-menus {
-        li {
+        .nav-item {
             padding-left: .75rem;
         }
     }
